# goit-algo-hw-10

./: pyproject.toml
task1_linear_programming/: main.py  model.py  production.py
task2_method_Monte_Carlo/: exact_integral_by_quad.py  main.py  monte_carlo_worker.py  readme.md  visualizing_result.py
