[project]
name = "production-optimization"
version = "0.1.0"
description = "Production optimization using PuLP"
requires-python = ">=3.10"
dependencies = [
    "pulp",
    "numpy",
    "matplotlib",
    "scipy",
]
[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    ".venv",
    "venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "PL", "RET", "RUF"]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
